# personalized-outreach-system

./: Fasterise_Knowledge_Base_Real_Estate.txt  Personalized_Outreach_System.ipynb  README.md  agent_templates.py  airtable_utils.py  config.json  linkedin_scraper.py  main.py  personalized_outreach_system.py  pyproject.toml  requirements.txt  tools.py
original_files_deprecated/: Personalized_Outreach_System.ipynb  personalized_outreach_system.py
