[tool.poetry]
name = "personalized-outreach-system"
version = "0.1.0"
description = ""
authors = ["Kuba and Alejo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.11"
langchain-community = "^0.0.27"
langchain-openai = "^0.0.8"
cohere = "^4.53"
requests = "^2.31.0"
google-search-results = "^2.4.2"
langchainhub = "^0.1.15"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.3"
pyairtable = "^2.3.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
